Add simple redux store to project

--- a/package.json
+++ b/package.json
@@ -4,17 +4,16 @@
   "description": "My first app created step by step",
   "main": "index.js",
   "scripts": {
-    "test": "testite",
     "start": "react-scripts start"
   },
   "keywords": [
-    "one-keyword"
   ],
   "author": "Hubert Tuszyński",
   "license": "ISC",
   "dependencies": {
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "react-scripts": "^1.0.14"
+    "react-scripts": "^1.0.14",
+    "redux": "^3.7.2"
   }
 }
