--- a/package.json
+++ b/package.json
@@ -6,14 +6,18 @@
   "scripts": {
     "start": "react-scripts start"
   },
-  "keywords": [
-  ],
+  "keywords": [],
   "author": "Hubert Tuszyński",
   "license": "ISC",
   "dependencies": {
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-redux": "^5.0.6",
     "react-scripts": "^1.0.14",
     "redux": "^3.7.2"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git://gothub.com/estebano/stepin-app.git"
   }
 }
